--- a/Week6/readme
+++ b/Week6/readme
@@ -1,5 +1,8 @@
-Binary search trees implementation
-i.create
-ii.preorder traversal
-iii.postorder traversal
-iv.inorder traversal
+Write a program that implement stack (its operations) using
+A. Arrays           
+B. Pointers
+Implement following operations
+i) Push   
+ii)Pop   
+iii) Is_Stack_Full     
+iv) Is-Stack_Empty
